--- a/netcoreapp3.1 identityserver4 angular pgsql/appsettings.Development.json
+++ b/netcoreapp3.1 identityserver4 angular pgsql/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=aspnetmembership;User Id=postgres;Password=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
