--- a/netcoreapp3.1 identityserver4 angular pgsql/appsettings.json
+++ b/netcoreapp3.1 identityserver4 angular pgsql/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-netcoreapp3._1_identityserver4_angular_pgsql-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=aspnetmembership;User Id=postgres;Password=root"
   },
   "Logging": {
       "LogLevel": {
